# REPLAYER

./: .gitignore  AGENTS.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_PACKAGE.md  AUDIT_README.md  BUTTON_CLICK_FIXES.md  CLAUDE.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CODEBASE_AUDIT_REPORT.md  CODE_REVIEW_SUMMARY.txt  COMMIT_MESSAGE.txt  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  CRITICAL_BUGS_FIXED.md  DEADLOCK_BUG_REPORT.md  DEBUGGING_GUIDE.md  DEMO_INCREMENTAL_CLICKING.md  LIVE_FEED_FIXES.md  LOG_ANALYSIS.md  MODERN_UI_PLAN.md  NEXT_SESSION_PLAN.md  PHASE_1_READY_FOR_TESTING.md  PRODUCTION_READINESS_PLAN.md  PR_REVIEW_CHECKLIST.md  QUICK_START_GUIDE.md  README.md  REFACTORING_CHANGELOG.md  REFACTORING_README.md  RESUME_SESSION_SUMMARY.md  ROADMAP.md  SESSION_COMPLETE_SUMMARY.md  SESSION_PLANNING.md  SESSION_SUMMARY_CRITICAL_FIXES.md  SETUP.md  VOLATILITY_SPIKE_VALIDATION.md  analysis_output.txt  analyze_game_durations.py  analyze_position_duration.py  analyze_spike_timing.py  (+13 more)
.claude/: scratchpad.md
.github/issues_to_create/: README.md  priority-02-server-state-authority.md  priority-03-live-game-recording.md  priority-04-rag-knowledge-base.md  priority-05-rl-model-integration.md  priority-06-browser-live-trading.md  priority-07-portfolio-dashboard.md  priority-08-player-profile-ui.md  publish-issues.sh
browser_automation/: automation.py  cdp_browser_manager.py  rugs_browser.py
deprecated/: README.md
deprecated/debug-scripts/: diagnose_button_forwarding.py  extract_rugs_selectors.py  test_async_manager.py
deprecated/root_docs/: WARP.md  (+3 more)
docs/: AUDIT_FIXES_SESSION_1.md  BROWSER_CONNECTION_PLAN.md  BUTTON_VISUAL_FEEDBACK.md  LIVE_INTEGRATION_PLAN.md  PHASE_10_4_PLAN.md  PHASE_1_COMPLETE_TESTING.md  PHASE_6_COMPLETION.md  PHASE_7A_COMPLETION.md  PHASE_8_5_COMPLETION.md  PHASE_8_5_IMPLEMENTATION_PLAN.md  PHASE_8_5_UI_DESIGN.md  PHASE_8_COMPLETION_ROADMAP.md  PHASE_9_IMPLEMENTATION_GUIDE.md  REFACTORING_DIAGRAM.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  SESSION_2025-11-17_SUMMARY.md  SESSION_HANDOFF.md  TIMING_CONFIGURATION_GUIDE.md  UI_THEMING_COMPLETION_SUMMARY.md  UI_THEMING_QUICK_START.md  UI_THEMING_VERSION_CONTROL_PLAN.md  WEBSOCKET_EVENTS_SPEC.md  XPATHS.txt
files/: VIEWER_COMPARISON.md
ml_training/: data_processor.py  model.py
models/: sidebet_model_gb_20251107_195802.pkl
reports/: AUDIT_SUMMARY.md  complexity.txt  dead_code.txt
sandbox/: SESSION_HANDOFF_PHASE_10_4.md  SESSION_HANDOFF_PHASE_10_4_IMPLEMENTATION.md
scripts/: analyze_raw_capture.py  pre_commit_review.sh  setup_chrome_profile.py  test_cdp_connection.py  test_reliable_connection.py
src/: CODE_AUDIT_REPORT.md  automated_bot_test.py  bot_config.json  config.py  debug_bot_session.py  demo_incremental_clicking.py  main.py  playwright_debug_helper.py  pytest.ini  timing_overlay.json
(+1121 files in other folders)
