[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replayer"
version = "0.10.7"
description = "Rugs.fun gameplay recorder and replay viewer with RL bot integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Dutchthenomad"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ttkbootstrap>=1.10.0",
    "python-socketio[client]>=5.10.0",
    "websocket-client>=1.6.0",
    "playwright>=1.40.0",
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
ml = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/Dutchthenomad/REPLAYER"
"Bug Tracker" = "https://github.com/Dutchthenomad/REPLAYER/issues"
"Documentation" = "https://github.com/Dutchthenomad/REPLAYER#readme"

[project.scripts]
replayer = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "ui: marks tests requiring display",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
timeout = 30

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | deprecated
    | external
    | \.worktrees
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    ".venv",
    "deprecated",
    "external",
    ".worktrees",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "deprecated/",
    "external/",
    ".worktrees/",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/tests/*",
    "src/deprecated/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 70
